Tue Apr 19 16:08:17 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>

        * MPC/config/xsc_utils.mpb:

          Added a missing base project.

Thu Apr 15 06:53:06 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * MPC/config/vcwarnings.mpb:
        * MPC/config/xscrt.mpb:

          Updated disabling of msvc warnings

Wed Sep 30 02:27:06 UTC 2009  James H. Hill  <hillj@dre.vanderbilt.edu>

        * XSC/be/CXX/Inline.cpp:

          The C++ backend was not generating 'inline' keyword for the
          set_*_ptr () and get_*_ptr () method.

Wed Sep 23 03:17:02 UTC 2009  James H. Hill  <hillj@dre.vanderbilt.edu>

        * MPC/config/utility.mpb:

          Utility is no longer distributed with ACE. It is now located
          in the contrib/ directory for XSC.

Wed Sep 23 03:12:05 UTC 2009  James H. Hill  <hillj@dre.vanderbilt.edu>

        * MPC/config/xscrt.mpb:

          Added ACE as a base project to fix compile/link errors.

Fri Aug 14 10:12:29 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tools/Config_Handlers/XSCRT/Elements.hpp:
          Disabled some code for CB2009

Thu Aug 13 10:31:29 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * XSCRT/XSCRT/Elements.hpp:
          Removed vc6 support and added the needed compiler checks to
          compile with all compilers

Wed Aug 12 15:14:19 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * MPC/config/utility.mpb
        * MPC/config/vcwarnings.mpb
        * MPC/config/xsc_be.mpb
        * MPC/config/xsc_static.mpb
        * MPC/config/xscrt.mpb
        * XSC/XSC.mpc
          Use prop:microsoft to make these files easier to maintain

Wed Aug 12 15:11:19 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * XSCRT/XMLSchema/id_map.hpp:
          Added missing Id tag

Mon Aug  3 19:24:19 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>

        * contrib/Utility.mpc:

          utility no longer under ACE.
