@@ -1,3 +1,12 @@
+Sat Jun  4 16:53:53 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>
+
+        * XSC/utils/XercesString.h:
+        * XSC/utils/XercesString.cpp:
+
+          Implemented a c_str () method
+
+          Implemented operator == and operator !=.
+
 Tue Apr 19 16:08:17 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>
 
         * MPC/config/xsc_utils.mpb:
